[package]
name = "ontour-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
clap = "3.1.6"
env_logger = "0.9.0"
log = "0.4.16"
ontour = { path = "../ontour" }
rmp-serde = "1.0.0"
serde_json = "1.0.79"
structopt = "0.3.26"
